--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ header {
 
 .container{
   margin: 0 auto;
-  padding: 16px 100px;
+  padding: 16px 32px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -124,7 +124,7 @@ header {
 .hero {
   width: 100%;
   height: 100vh;
-  background: url('./assests//images/solarPanels.png') no-repeat center center/cover;
+  background: url('./assests/images/solarPanels.png') no-repeat center center/cover;
   position: relative;
   overflow: hidden;
   color: var(--sec-color);
@@ -384,20 +384,122 @@ header {
   margin-bottom: 50px;
 }
 
-
-
-
-
-@media (max-width:1300px){
-  .container{
-    padding: 0 20px;
-  }
+/* section 4*/
+.section4{
+  width: 100%;
+  height: auto;
+  margin-bottom: 50px;
 }
 
+.section4-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 90%;
+  height: 100%;
+}
+
+.section4-container .section4-content{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
+
+.section4-content .section4-text{
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.section4-content .section4-text > h1 {
+  text-align: center;
+  font-weight: 600;
+  font-size: 42px;
+  line-height: 100%;
+  letter-spacing: -2%;
+}
+
+.section4-content .section4-text > p {
+  text-align: center;
+  width: 936px;
+  height: 48px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0%;
+  color: rgba(71, 84, 103, 1);
+}
+
+.section4-content .cards {
+  display: flex;
+  justify-content: space-between;
+  gap: 32px;
+  margin: 50px 0;
+  width: 100%;
+  height: auto;
+}
+
+.cards > div {
+  flex-basis: calc(33.33% - 20px);
+  height: 454px;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.1);
+}
+
+.cards > div .card-content{
+  padding: 20px;
+}
+
+.cards > div .card-content h2 {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0;
+  color: var(--text-color);
+  margin-bottom: 14px;
+}
+
+.cards > div .card-content p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0%;
+  color: rgba(71, 84, 103, 1);
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  margin-bottom: 14px;
+  -webkit-box-orient: vertical;
+}
+
+.cards > div button {
+  border: none;
+  outline: none;
+  width: 110px;
+  height: 24px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: transparent;
+  color: var(--btn-color);
+  cursor: pointer;
+}
+
+.cards > div button i {
+  color: var(--btn-color);
+}
+
+.section4 img {
+  width: 100%;
+  height: 240px;
+  object-fit: cover;
+} 
+
 @media (max-width:1125px){
-  .container{
-    padding: 0;
-  }
 
   .header-contact{
     display: none;
@@ -422,7 +524,6 @@ header {
     left: -20px;
   }
 
-  
   .section3-content > h1 {
     font-size: 38px;
   }
@@ -430,10 +531,10 @@ header {
   .section3-content > p {
     width: 400px;
   }
+
 }
 
-
-@media (max-width:764px) {
+@media (max-width:770px) {
   /* header styling*/
   .logo{
     min-width: 100px;
@@ -528,6 +629,24 @@ header {
   }
 }
 
+/* Responsive Design */
+@media (max-width: 992px) {
+  .section4-content .cards  {
+    width: 500px;
+    flex-direction: column; 
+  }
+
+  .cards > div {
+    flex-basis: 100%;
+    margin-bottom: 20px; 
+  }
+
+  .section4-content .section4-text > p {
+    width: 450px;
+  }
+}
+
+
 @media (max-width:530px) {
   .hero-content{
     z-index: 0;
@@ -559,9 +678,43 @@ header {
   .section3-content > p {
     width: 350px;
     font-size: 15px;
+  } 
+
+  .section3-content > p {
+    width: 200px;
+    font-size: 12px;
   }
 
+  /* section 4*/
+  .section4-content .section4-text > h1 {
+    font-size: 25px;
+  }
 
+  .section4-content .cards  {
+    width: 300px;
+    flex-direction: column; 
+  }
+
+  .cards > div {
+    flex-basis: 100%;
+    margin-bottom: 20px; 
+  }
+
+  .section4-content .section4-text > p {
+    width: 350px;
+    font-size: 10px;
+    line-height: 14px;
+  }
+
+  .cards > div .card-content h2 {
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 14px;
+  }
+  
+  .cards > div .card-content p {
+    font-size: 13px;
+  }
 }
 
 @media (max-width:430px) {
@@ -594,9 +747,5 @@ header {
     padding: 15px 5px;
     font-size: 10px;
   }
-  .section3-content > p {
-    width: 200px;
-    font-size: 12px;
-  }
-
 }
+
