section 5 and screen ressponsivness

--- a/styles.css
+++ b/styles.css
@@ -396,6 +396,7 @@ header {
   justify-content: center;
   align-items: center;
   margin: 0 auto;
+  padding: 16px 32px;
   width: 90%;
   height: 100%;
 }
@@ -498,6 +499,53 @@ header {
   height: 240px;
   object-fit: cover;
 } 
+
+/* section 5*/
+.section5 {
+  width: 100%;
+  height: 80vh;
+  background: url('./assests/images/planning-enviroment.png') no-repeat center center/cover;
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.section5 .section5-content {
+  background-color: rgba(0, 0, 0, 0.57);
+  width: 858px;
+  height: 311px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 44px;
+  border-radius: 12px;
+  gap: 32px;
+  backdrop-filter: blur(24px);
+}
+
+.section5-content > h1 {
+  font-weight: 600;
+  font-size: 42px;
+  line-height: 100%;
+  letter-spacing: -2%;
+  color: var(--sec-color);
+  text-align: center;
+} 
+
+.section5-content > p {
+  width: 770px;
+  height: 140px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 140%;
+  letter-spacing: 0%;
+  color: var(--sec-color);
+  text-align: center;
+}
 
 @media (max-width:1125px){
 
@@ -627,6 +675,8 @@ header {
     font-size: 16px;
     margin-bottom: 32px;
   }
+
+  /* section 5*/
 }
 
 /* Responsive Design */
@@ -643,6 +693,21 @@ header {
 
   .section4-content .section4-text > p {
     width: 450px;
+  }
+
+  /* section 5*/
+  .section5 .section5-content {
+    width: 100%;
+    border-radius: 0px;
+  }
+  
+  .section5-content > h1 {
+    font-size: 35px;
+  }
+  
+  .section5-content > p {
+    width: 450px;
+    font-size: 16px;
   }
 }
 
@@ -715,6 +780,21 @@ header {
   .cards > div .card-content p {
     font-size: 13px;
   }
+
+  /* section 5*/
+  .section5 .section5-content {
+    width: 100%;
+    border-radius: 0px;
+  }
+  
+  .section5-content > h1 {
+    font-size: 25px;
+  }
+  
+  .section5-content > p {
+    width: 400px;
+    font-size: 12px;
+  }
 }
 
 @media (max-width:430px) {
@@ -746,6 +826,21 @@ header {
     height: 30px;
     padding: 15px 5px;
     font-size: 10px;
+  }
+
+  /* section 5*/
+  .section5 .section5-content {
+    width: 100%;
+    border-radius: 0px;
+  }
+  
+  .section5-content > h1 {
+    font-size: 20px;
+  }
+  
+  .section5-content > p {
+    width: 350px;
+    font-size: 14px;
   }
 }
 
