--- a/styles.css
+++ b/styles.css
@@ -886,6 +886,130 @@ header {
   font-size: 36px;
 }
 
+/* Footer */
+footer {
+  width: 100%;
+  height: auto;
+  background-color: var(--footer-color);
+  margin-top: 50px;
+}
+
+footer .footer-content {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 54px;
+  padding: 80px 0;
+}
+
+footer .footer-section-1 , footer .footer-section-2{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+footer .footer-section-1 > div img {
+  width: 185px;
+  height: 64px;
+  object-fit: cover;
+}
+
+footer .footer-section-1 > div:first-child  {
+  display: flex;
+  flex-direction: column;
+  gap: 38px;
+}
+
+footer .footer-section-1 > div:first-child  ul, 
+footer .footer-section-2 ul{
+  display: flex;
+  gap: 40px;
+  list-style: none;
+}
+
+footer .footer-section-1 > div:first-child  ul li a ,
+footer .footer-section-1 > div:last-child p {
+  color: var(--sec-color);
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.3px;
+}
+
+footer .footer-section-2 p ,
+footer .footer-section-2 ul li a{
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0.26px;
+  color: rgba(146, 152, 159, 1);
+  text-decoration: none;
+  position: relative;
+}
+
+footer .footer-section-2 ul li a::after {
+  position: absolute;
+  content: '|';
+  margin-left: 15px;
+  top: 0;
+}
+
+footer .footer-section-1 > div:first-child  ul li a  {
+  cursor: pointer;
+}
+
+footer .footer-section-1 > div:last-child  {
+  display: flex;
+  justify-content:center;
+  flex-direction: column;
+  width: 408px;
+  height: 82px;
+  padding: 0 1px;
+}
+
+footer .footer-section-1 > div:last-child form {
+  width: 406px;
+  height: 48px;
+  display: flex;
+  overflow: hidden;
+  margin-top: 5px;
+  border-radius: 38px;
+  border: 1px solid rgba(179, 189, 199, 1);
+  outline: none;
+  background-color: rgba(255, 255, 255, 0.09);
+}
+
+footer .footer-section-1 > div:last-child form input {
+  flex: 1;
+  background-color: transparent;
+  outline: none;
+  padding: 0 20px;
+  border: none;
+}
+
+footer .footer-section-1 > div:last-child form button {
+  width: 147px;
+  height: 100%;
+  border-radius: 109px;
+  padding: 12px 34px;
+  color: var(--sec-color);
+  background-color: rgba(255, 187, 28, 1);
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+footer hr {
+  width: 100%;
+  height: 2px;
+  border: 1px solid rgba(113, 119, 125, 1);
+  background-color: rgba(113, 119, 125, 1);
+}
+
+
+
 
 @media (max-width: 1380px){
    /* section 6 */
@@ -986,6 +1110,11 @@ header {
     .section7-content .cards > div p {
       font-size: 14px;
   }
+
+  /*footer*/
+  footer .footer-section-1 > div:first-child  ul{
+    gap: 20px;
+  }
 }
 
 /* Responsive Design */
@@ -1019,7 +1148,6 @@ header {
     width: 450px;
     font-size: 16px;
   }
-
   
   /* section 6*/
   .section6-content > div:first-child {
@@ -1059,12 +1187,12 @@ header {
   }
 
   /* section 7 */
-
   .section7-content .cards {
     display: flex;
     justify-content: center;
     align-items: center;
   }
+
   .section7-content .cards > div {
     padding: 20px;
     gap: 10px;
@@ -1140,7 +1268,18 @@ header {
     width: 48px;
     height: 48px;
   }
-  
+
+  /*footer*/
+  footer .footer-section-1 , footer .footer-section-2 {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  footer .footer-section-1 > div:first-child  ul{
+    gap: 20px;
+  }
 }
 
 @media (max-width:890px){
@@ -1304,6 +1443,34 @@ header {
   
   .section7-content .section7-text > p {
     font-size: 14px;
+  }
+
+  /* section 8 */
+  .section8-content .section8-text > h1 {
+    font-size: 35px;
+    width: 400px;
+  }
+
+  .section8-content .section8-text > p {
+    width: 300px;
+    font-size: 15px;
+  }
+
+  /*footer*/
+  footer .footer-section-1 {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  footer .footer-section-1 > div:first-child  ul {
+    gap: 10px;
+  }
+
+  footer .footer-section-2 p ,
+  footer .footer-section-2 ul li a {
+    font-size: 10px;
   }
 }
 
@@ -1485,6 +1652,60 @@ header {
   .section7-content .section7-text > p {
     font-size: 14px;
   }
+
+  /*footer*/
+  footer .footer-section-1 {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 5px;
+  }
+
+  footer .footer-section-1 > div:first-child  ul{
+    gap: 10px;
+  }
+
+  footer .footer-section-1 > div:first-child  ul li a ,
+  footer .footer-section-1 > div:last-child p {
+    font-size: 12px;
+  }
+
+  footer .footer-section-1 > div:last-child form {
+    width: 300px;
+  }
+
+  footer .footer-section-1 > div:last-child form input {
+    padding: 0 10px;
+  }
+
+  footer .footer-section-1 > div:last-child  {
+    width: 350px;
+  }
+  
+  footer .footer-section-1 > div:last-child form button {
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 80px;
+    padding: 10px 24px;
+  }
+
+  footer .footer-section-1 > div img {
+    width: 90px;
+    height: 45px;
+  }
+
+  footer .footer-section-2 ul{
+    gap: 5px;
+  }
+
+  footer .footer-section-2 ul li a{
+    margin-left:1px ;
+  }
+  footer .footer-section-2 ul li a::after{
+    margin-left:1px ;
+  }
 }
 
 @media (max-width:430px) {
@@ -1624,16 +1845,100 @@ header {
   
   .section7-content .section7-text > p {
     font-size: 14px;
+    width: 240px;
   }
   /* section 8 */
+  .section8-content .section8-text > img {
+    width: 30px;
+    height: 30px;
+  }
+
   .section8-content .section8-text > h1 {
     font-size: 20px;
     width: 250px;
   }
 
+  .section8-content .section8-text > p {
+    width: 250px;
+    font-size: 12px;
+  }
+
+  .section8-content .testimolines {
+    padding: 20px;
+  }
+
+  .section8-content .testimolines > div h1 {
+    font-size: 12px;
+  }
+
+  .section8-content .testimolines > div:nth-child(2) p {
+    width: 200px;
+    font-size: 14px;
+  }
   
-.section8-content .section8-text > p {
-  width: 250px;
-  font-size: 12px;
-}
+  .section8-content .testimolines > div:nth-child(3) > div  {
+    gap: 10px;
+  }
+  
+  .section8-content .testimolines > div:nth-child(3) img {
+    width: 30px;
+    height: 30px;
+  }
+  
+  .section8-content .testimolines > div:nth-child(3) > div:nth-child(2) p {
+    font-size: 16px;
+  }
+  
+  .section8-content .testimolines > div:nth-child(3) > div:nth-child(2) i {
+    width: 20px;
+    height: 20px;
+    font-size: 15px;
+  }
+
+  .section8-content .testimolines > div:nth-child(3) .text p {
+    font-size: 12px;
+    width: 100px;
+  }
+
+  
+  .section8-content .testimolines > div .pagination{
+    width: 50px;
+    height: 4px;
+  }
+
+  .section8-content .testimolines > div .pagination span {
+    width: 4px;
+    height: 4px;
+  }
+
+  /*footer*/
+  footer .footer-section-1 > div:first-child  ul li a ,
+  footer .footer-section-1 > div:last-child p {
+    font-size: 10px;
+  }
+
+  footer .footer-section-1 > div:last-child form {
+    width: 280px;
+    height: 35px;
+  }
+
+  footer .footer-section-1 > div:last-child form input {
+    padding-left: 10px;
+    font-size: 10px;
+  }
+  
+  footer .footer-section-1 > div:last-child form button {
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    border-radius: 70px;
+    font-size: 10px;
+  }
+  
+  footer .footer-section-1 > div img {
+    width: 90px;
+    height: 45px;
+  }
 }
