--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@
   font-family: 'Inter', sans-serif;
 }
 
-/* header styling */
+/* header */
 header {
   width: 100%;
   height: 86px;
@@ -119,7 +119,7 @@ header {
   color: var(--sec-color);
   text-decoration: none;
 }
-
+/*end headder */
 /* hero section */
 .hero {
   width: 100%;
@@ -185,7 +185,6 @@ header {
   border-radius: 3.75px;
   z-index: 1;
 }
-
 
 .heading1 {
   font-weight: 600;
@@ -433,9 +432,10 @@ header {
   color: rgba(71, 84, 103, 1);
 }
 
+/*cards*/
 .section4-content .cards {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns:  repeat(auto-fit, minmax(250px,auto));
   gap: 32px;
   margin: 50px 0;
   width: 100%;
@@ -545,7 +545,6 @@ header {
   color: var(--sec-color);
   text-align: center;
 }
-
 
 /* section 6*/
 .section6 {
@@ -723,8 +722,8 @@ header {
 }
 
 .section7-content .cards {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns:  repeat(auto-fit, minmax(250px,auto));
   gap: 32px;
   margin: 50px 0;
   padding: 0 32px;
@@ -738,6 +737,7 @@ header {
   flex-direction: column;
   gap: 20px;
   width: 100%;
+  height: auto;
   background-color: rgba(60, 171, 144, 0.05);
 }
 
@@ -1008,9 +1008,7 @@ footer hr {
   background-color: rgba(113, 119, 125, 1);
 }
 
-
-
-
+/* Responsive Design */
 @media (max-width: 1380px){
    /* section 6 */
   .section6 .section6-content{
@@ -1029,14 +1027,14 @@ footer hr {
 } 
 
 @media (max-width:1125px){
-
+  /*header*/
   .header-contact{
     display: none;
   }
-
   .items a {
     font-size: 16px;
   }
+  /*end header*/
 
   .section2-content > div:first-child .text h1 {
     font-size: 30px;
@@ -1083,21 +1081,6 @@ footer hr {
 
 @media (max-width: 1150px){
     /* section 7 */
-    .section7-content .cards {
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      flex-wrap: wrap;
-      width: auto; 
-    }
-  
-    .section7-content .cards > div {
-      padding: 24px;
-      gap: 10px;
-      flex-basis:400px; 
-      height: 450px;
-    }
-    
     .section7-content .cards > div img {
       width: 45px;
       height: 50px;
@@ -1117,12 +1100,9 @@ footer hr {
   }
 }
 
-/* Responsive Design */
 @media (max-width: 992px) {
   .section4-content .cards  {
-    width: 500px;
-    flex-direction: column; 
-    margin: 0;
+    gap:20px ;
   }
 
   .cards > div {
@@ -1187,18 +1167,6 @@ footer hr {
   }
 
   /* section 7 */
-  .section7-content .cards {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .section7-content .cards > div {
-    padding: 20px;
-    gap: 10px;
-    flex-basis:350px; 
-    height: 350px;
-  }
   
   .section7-content .cards > div img {
     width: 45px;
@@ -1282,49 +1250,18 @@ footer hr {
   }
 }
 
-@media (max-width:890px){
-   /* section 7 */
-  .section7-content .cards {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    width: 60%;
-  }
-
-  .section7-content .cards > div {
-    padding: 34px;
-    gap: 10px;
-    flex-basis:450px; 
-    height: 400px;
-  }
-  
-  .section7-content .cards > div img {
-    width: 45px;
-    height: 50px;
-  }
-  
-  .section7-content .cards > div h2 {
-    font-size: 16px;
-  }
-  
-  .section7-content .cards > div p {
-    font-size: 14px;
-  }
-}
-
-
 @media (max-width:770px) {
   /* header styling*/
+  .container {
+    padding: 0;
+  }
   .logo{
     min-width: 100px;
     height: 45px;
   }
-
   .menu-icon {
     display: block;
   }
-
   .nav-list {
     position: absolute;
     top: 100%;
@@ -1337,36 +1274,31 @@ footer hr {
     overflow: hidden;
     isolation: isolate;
   }
-
   .active a , .items:hover a {
     border-radius: 0;    
     box-shadow: none;
   }
-
   .items:hover a {
     color: var(--primary-color);
   }
-
   /* Show the navigation links when the checkbox is checked */
   #menu-toggle:checked ~ .nav-list {
     display: flex;
     z-index: 9999;
   }
-
   /* Animate the hamburger icon into an "X" */
   #menu-toggle:checked ~ .menu-icon span:nth-child(1){
     transform: rotate(45deg) translate(5px, 6px);
   }
-
   #menu-toggle:checked ~ .menu-icon span:nth-child(2){
     opacity: 0;
   }
-
   #menu-toggle:checked ~ .menu-icon span:nth-child(3){
     transform: rotate(-45deg) translate(5px, -6px);
   }
+  /*end header*/
 
-  /*hero styling*/
+  /*hero section*/
   .heading1 ,
   .section2-content > div:first-child .text h1  {
     font-size: 45px;
@@ -1376,6 +1308,7 @@ footer hr {
     font-size: 15px;
     max-width: 450px;
   }
+  /*end hero section*/
 
   /* section 2 styling */
   .section2  .section2-content{
@@ -1410,12 +1343,7 @@ footer hr {
 
   /* section 7 */
   .section7-content .cards {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    width: 90%;
-    margin:  0;
+    grid-template-columns:  repeat(auto-fit, minmax(210px,auto));
   }
 
   .section7-content .cards > div {
@@ -1475,10 +1403,7 @@ footer hr {
 }
 
 @media (max-width:530px) {
-  .container {
-    padding: 0;
-  }
-
+  /*hero section, section 2 , section 3 h1 , p ,li , btns*/
   .hero-content{
     z-index: 0;
   }
@@ -1517,12 +1442,7 @@ footer hr {
     font-size: 25px;
   }
 
-  .section4-content .cards  {
-    width: 300px;
-    flex-direction: column; 
-  }
-
-  .cards > div {
+  .section4-content .cards > div {
     flex-basis: 100%;
     margin-bottom: 20px; 
   }
@@ -1534,13 +1454,13 @@ footer hr {
     line-height: 14px;
   }
 
-  .cards > div .card-content h2 {
+  .section4-content .cards > div .card-content h2 {
     font-size: 16px;
     line-height: 24px;
     margin-bottom: 14px;
   }
   
-  .cards > div .card-content p {
+  .section4-content .cards > div .card-content p {
     font-size: 13px;
   }
 
@@ -1616,15 +1536,6 @@ footer hr {
   }
 
    /* section 7 */
-  .section7-content .cards {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    width: auto;
-    margin:  0;
-    gap: 12px;
-  }
 
   .section7-content .cards > div {
     padding: 20px;
@@ -1811,11 +1722,7 @@ footer hr {
 
    /* section 7 */
   .section7-content .cards {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    width: auto;
+    grid-template-columns:  repeat(auto-fit, minmax(250px,auto));
     margin:  0;
     gap: 12px;
   }
@@ -1899,7 +1806,6 @@ footer hr {
     font-size: 12px;
     width: 100px;
   }
-
   
   .section8-content .testimolines > div .pagination{
     width: 50px;
